...
            homeButton.widthAnchor.constraint(equalTo: homeButton.heightAnchor)
        ])
    }

    let restartButton: UIButton = {
        let color = PalletteManager().getActivePallette().getColor(option: .fourthColor)
        let restartButton = RoundedButton(frame: .zero, nameIcon: "arrow.counterclockwise", sizeButton: 56, sizeIcon: 24, weightIcon: .bold, backgroundColor: color, tintColor: .white)
        restartButton.translatesAutoresizingMaskIntoConstraints = false
        restartButton.startAnimatingPressActions()
        return restartButton
    }()

    func restartConstraints() {
...
